2013-07-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.1.1)

	- Fix bug. Remove repeated points at lon=-180º and lon=180.

2013-06-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_sphmesh.m: (0.1.0)
	* matlab/test/test_dmatrix_sphmesh.m: (0.1.0)

	- DMATRIX_SPHMESH Sparse great-circle distance and shortest-path
	distance matrices between the nodes of a spherical mesh.

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.1.1)

	- Fix bug. In each mesh facet, one edge was being forgotten, the
	one that links the last vertex in tri(i, :) to the first one.

2013-06-26  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/surface_tridomain.m: (0.1.0)
	* Add matlab/test/test_surface_tridomain.m: (0.1.0)

	- SURFACE_TRIDOMAIN Triangular mesh to cover a planar or spherical
	domain.

	* matlab/PointsToolbox/surface_param.m: (0.3.0)
	* matlab/test/test_surface_param.m: (0.3.0)

	- Add 'sphproj' parametrization: Direct projection on unit sphere
	centered on point set centroid. This cannibalises function
	proj_on_sphere(), that will shortly be deleted.

2013-06-25 Chris Kelly <christopher.kelly28@googlemail.com>

	* CMakeLists.txt: (0.5.1)

	- Windows finds the source code directory of ITK rather than the
	installed ITK, so we have to tell it where to find the correct
	directory.

2013-06-25  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/check_sphtrisurf_vertices.m: (0.1.0)
	* Add matlab/test/test_check_sphtrisurf_vertices.m: (0.1.0)

	- CHECK_SPHTRISURF_VERTICES Check integrity of the vertices of a
	spherical triangular mesh, to make sure facets do not overlap.

2013-06-24  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/SphericalTrigToolbox:
	* Add matlab/add_gerardus_paths.m: (0.1.4)

	- Oblique Spherical Triangle toolbox by Rody Oldenhuis, 23 Feb
	2009 (Updated 30 Nov 2012). Downloaded from
